# syskey-web

./: .gitignore  LICENSE  Makefile  README.md
backend/: pyproject.toml
backend/syskey/: __init__.py  cli.py  main.py
backend/syskey/api/: files.py  projects.py  search.py  tags.py
backend/syskey/db/: database.py  models.py
backend/syskey/features/files/: files_extractor.py  files_indexer.py  files_models.py  files_router.py  files_schemas.py  files_service.py  files_storage.py
backend/syskey/features/projects/: analysis_schemas.py  analysis_service.py  classification_service.py  projects_models.py  projects_router.py  projects_schemas.py  projects_service.py
backend/syskey/features/search/: search_router.py  search_schemas.py  search_service.py
backend/syskey/features/tags/: tags_models.py  tags_router.py  tags_schemas.py  tags_service.py
backend/syskey/services/: indexer.py
backend/syskey/shared/: database.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  main.jsx  main.tsx  theme.js  types.ts
frontend/src/components/: FileUpload.jsx  FileUpload.tsx  SearchResults.jsx  SearchResults.tsx
frontend/src/features/files/: file-list.tsx  file-upload.tsx
frontend/src/features/files/hooks/: use-delete-file.ts  use-file-upload.ts  use-files-query.ts
frontend/src/features/files/mutations/: files.ts
frontend/src/features/keywords/: keyword-setup.tsx
frontend/src/features/projects/: project-analysis.tsx  project-classification.tsx  project-dashboard.tsx
(+8 files in other folders)
